<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.faiz.sodingtaskmanagement.MainActivity">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/task_mgmt_txt"
        android:textStyle="bold"
        android:gravity="clip_horizontal" />
    <Button
        android:id="@+id/create_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_task_btn"/>
    <Button
        android:id="@+id/edit_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_task_btn"/>
    <Button
        android:id="@+id/delete_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del_task_btn"/>
    <Button
        android:id="@+id/list_all_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_all_task_btn"/>
</LinearLayout>
